--- a/src/scss/components/_utils.scss
+++ b/src/scss/components/_utils.scss
@@ -45,7 +45,7 @@
 body {
     max-width: 100%;
     width: 100%;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 footer.fl-page-footer-wrap {
